// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin generator generates plugin into existing directory with defaults 1`] = `
"{
  \\"name\\": \\"checkup-plugin-bar\\",
  \\"description\\": \\"Checkup plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\",
    \\"tslib\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"@types/jest\\": \\"^25.1.3\\",
    \\"@types/node\\": \\"^13\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"^3.5.0\\",
    \\"@typescript-eslint/parser\\": \\"^3.5.0\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\",
    \\"ts-jest\\": \\"^25.2.1\\",
    \\"ts-node\\": \\"^8\\",
    \\"typescript\\": \\"^3.8\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"\\",
  \\"scripts\\": {
    \\"build\\": \\"yarn clean && tsc\\",
    \\"build:watch\\": \\"yarn build -w\\",
    \\"clean\\": \\"rm -rf lib\\",
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache --ext .ts\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"types\\": \\"lib/index.d.ts\\",
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"@typescript-eslint\\", \\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"prettier/@typescript-eslint\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"error\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.ts\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin into existing directory with defaults 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin into existing directory with defaults 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin into existing directory with defaults 6`] = `
"# checkup-plugin-bar

Checkup plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  transform: { '\\\\\\\\.ts$': 'ts-jest' },
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.ts'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 8`] = `
"{
  \\"compilerOptions\\": {
    \\"declaration\\": true,
    \\"importHelpers\\": true,
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,
    \\"target\\": \\"es2017\\",
    \\"allowSyntheticDefaultImports\\": true,
    \\"sourceMap\\": true,
    \\"outDir\\": \\"lib\\",
    \\"rootDir\\": \\"src\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  },
  \\"include\\": [\\"src/**/*\\"]
}
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 9`] = `
"export default {};

export * from './types';
"
`;

exports[`plugin generator generates plugin into existing directory with defaults 10`] = `""`;

exports[`plugin generator generates plugin into existing directory with defaults 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin into existing directory with defaults 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin into existing directory with defaults 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin into existing directory with defaults 14`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with JavaScript defaults 1`] = `
"{
  \\"name\\": \\"checkup-plugin-my-plugin\\",
  \\"description\\": \\"Checkup plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"\\",
  \\"scripts\\": {
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin with JavaScript defaults 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin with JavaScript defaults 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"babel-eslint\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.js\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin with JavaScript defaults 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin with JavaScript defaults 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin with JavaScript defaults 6`] = `
"# checkup-plugin-my-plugin

Checkup plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin with JavaScript defaults 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['js', 'json'],
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.js'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin with JavaScript defaults 8`] = `
"export default {};
"
`;

exports[`plugin generator generates plugin with JavaScript defaults 9`] = `""`;

exports[`plugin generator generates plugin with JavaScript defaults 10`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with JavaScript defaults 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with JavaScript defaults 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with JavaScript defaults 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with custom options 1`] = `
"{
  \\"name\\": \\"checkup-plugin-my-plugin\\",
  \\"description\\": \\"My custom plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"scalvert <steve.calvert@gmail.com>\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\",
    \\"tslib\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"@types/jest\\": \\"^25.1.3\\",
    \\"@types/node\\": \\"^13\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"^3.5.0\\",
    \\"@typescript-eslint/parser\\": \\"^3.5.0\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\",
    \\"ts-jest\\": \\"^25.2.1\\",
    \\"ts-node\\": \\"^8\\",
    \\"typescript\\": \\"^3.8\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"http://github.com/scalvert/checkup-plugin-my-plugin\\",
  \\"scripts\\": {
    \\"build\\": \\"yarn clean && tsc\\",
    \\"build:watch\\": \\"yarn build -w\\",
    \\"clean\\": \\"rm -rf lib\\",
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache --ext .ts\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"types\\": \\"lib/index.d.ts\\",
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin with custom options 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin with custom options 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"@typescript-eslint\\", \\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"prettier/@typescript-eslint\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"error\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.ts\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin with custom options 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin with custom options 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin with custom options 6`] = `
"# checkup-plugin-my-plugin

My custom plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin with custom options 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  transform: { '\\\\\\\\.ts$': 'ts-jest' },
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.ts'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin with custom options 8`] = `
"{
  \\"compilerOptions\\": {
    \\"declaration\\": true,
    \\"importHelpers\\": true,
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,
    \\"target\\": \\"es2017\\",
    \\"allowSyntheticDefaultImports\\": true,
    \\"sourceMap\\": true,
    \\"outDir\\": \\"lib\\",
    \\"rootDir\\": \\"src\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  },
  \\"include\\": [\\"src/**/*\\"]
}
"
`;

exports[`plugin generator generates plugin with custom options 9`] = `
"export default {};

export * from './types';
"
`;

exports[`plugin generator generates plugin with custom options 10`] = `""`;

exports[`plugin generator generates plugin with custom options 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with custom options 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with custom options 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with custom options 14`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults 1`] = `
"{
  \\"name\\": \\"checkup-plugin-my-plugin\\",
  \\"description\\": \\"Checkup plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\",
    \\"tslib\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"@types/jest\\": \\"^25.1.3\\",
    \\"@types/node\\": \\"^13\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"^3.5.0\\",
    \\"@typescript-eslint/parser\\": \\"^3.5.0\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\",
    \\"ts-jest\\": \\"^25.2.1\\",
    \\"ts-node\\": \\"^8\\",
    \\"typescript\\": \\"^3.8\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"\\",
  \\"scripts\\": {
    \\"build\\": \\"yarn clean && tsc\\",
    \\"build:watch\\": \\"yarn build -w\\",
    \\"clean\\": \\"rm -rf lib\\",
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache --ext .ts\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"types\\": \\"lib/index.d.ts\\",
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin with defaults 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin with defaults 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"@typescript-eslint\\", \\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"prettier/@typescript-eslint\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"error\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.ts\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin with defaults 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin with defaults 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin with defaults 6`] = `
"# checkup-plugin-my-plugin

Checkup plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin with defaults 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  transform: { '\\\\\\\\.ts$': 'ts-jest' },
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.ts'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin with defaults 8`] = `
"{
  \\"compilerOptions\\": {
    \\"declaration\\": true,
    \\"importHelpers\\": true,
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,
    \\"target\\": \\"es2017\\",
    \\"allowSyntheticDefaultImports\\": true,
    \\"sourceMap\\": true,
    \\"outDir\\": \\"lib\\",
    \\"rootDir\\": \\"src\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  },
  \\"include\\": [\\"src/**/*\\"]
}
"
`;

exports[`plugin generator generates plugin with defaults 9`] = `
"export default {};

export * from './types';
"
`;

exports[`plugin generator generates plugin with defaults 10`] = `""`;

exports[`plugin generator generates plugin with defaults 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults 14`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults in custom path 1`] = `
"{
  \\"name\\": \\"checkup-plugin-my-plugin\\",
  \\"description\\": \\"Checkup plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\",
    \\"tslib\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"@types/jest\\": \\"^25.1.3\\",
    \\"@types/node\\": \\"^13\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"^3.5.0\\",
    \\"@typescript-eslint/parser\\": \\"^3.5.0\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\",
    \\"ts-jest\\": \\"^25.2.1\\",
    \\"ts-node\\": \\"^8\\",
    \\"typescript\\": \\"^3.8\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"\\",
  \\"scripts\\": {
    \\"build\\": \\"yarn clean && tsc\\",
    \\"build:watch\\": \\"yarn build -w\\",
    \\"clean\\": \\"rm -rf lib\\",
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache --ext .ts\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"types\\": \\"lib/index.d.ts\\",
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin with defaults in custom path 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin with defaults in custom path 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"@typescript-eslint\\", \\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"prettier/@typescript-eslint\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"error\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.ts\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin with defaults in custom path 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin with defaults in custom path 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin with defaults in custom path 6`] = `
"# checkup-plugin-my-plugin

Checkup plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin with defaults in custom path 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  transform: { '\\\\\\\\.ts$': 'ts-jest' },
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.ts'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin with defaults in custom path 8`] = `
"{
  \\"compilerOptions\\": {
    \\"declaration\\": true,
    \\"importHelpers\\": true,
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,
    \\"target\\": \\"es2017\\",
    \\"allowSyntheticDefaultImports\\": true,
    \\"sourceMap\\": true,
    \\"outDir\\": \\"lib\\",
    \\"rootDir\\": \\"src\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  },
  \\"include\\": [\\"src/**/*\\"]
}
"
`;

exports[`plugin generator generates plugin with defaults in custom path 9`] = `
"export default {};

export * from './types';
"
`;

exports[`plugin generator generates plugin with defaults in custom path 10`] = `""`;

exports[`plugin generator generates plugin with defaults in custom path 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults in custom path 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults in custom path 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with defaults in custom path 14`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with unmodified name with defaults 1`] = `
"{
  \\"name\\": \\"checkup-plugin-foo\\",
  \\"description\\": \\"Checkup plugin\\",
  \\"version\\": \\"0.0.0\\",
  \\"author\\": \\"\\",
  \\"dependencies\\": {
    \\"@checkup/core\\": \\"^0.0.1\\",
    \\"@oclif/command\\": \\"^1\\",
    \\"@oclif/config\\": \\"^1\\",
    \\"tslib\\": \\"^1\\"
  },
  \\"devDependencies\\": {
    \\"@checkup/test-helpers\\": \\"^0.0.1\\",
    \\"@oclif/dev-cli\\": \\"^1\\",
    \\"@types/jest\\": \\"^25.1.3\\",
    \\"@types/node\\": \\"^13\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"^3.5.0\\",
    \\"@typescript-eslint/parser\\": \\"^3.5.0\\",
    \\"eslint\\": \\"^7.5.0\\",
    \\"eslint-config-prettier\\": \\"^6.11.0\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-node\\": \\"^11.1.0\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.3\\",
    \\"jest\\": \\"^25.1.0\\",
    \\"prettier\\": \\"^2.0.5\\",
    \\"ts-jest\\": \\"^25.2.1\\",
    \\"ts-node\\": \\"^8\\",
    \\"typescript\\": \\"^3.8\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= 12.11.*\\"
  },
  \\"files\\": [
    \\"/lib\\",
    \\"/oclif.manifest.json\\"
  ],
  \\"keywords\\": [
    \\"checkup-plugin\\",
    \\"oclif-plugin\\"
  ],
  \\"license\\": \\"MIT\\",
  \\"oclif\\": {
    \\"devPlugins\\": [
      \\"@oclif/plugin-help\\"
    ],
    \\"hooks\\": {
      \\"register-tasks\\": \\"./lib/hooks/register-tasks\\"
    }
  },
  \\"repository\\": \\"\\",
  \\"scripts\\": {
    \\"build\\": \\"yarn clean && tsc\\",
    \\"build:watch\\": \\"yarn build -w\\",
    \\"clean\\": \\"rm -rf lib\\",
    \\"postpack\\": \\"rm -f oclif.manifest.json\\",
    \\"prepack\\": \\"rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme\\",
    \\"test\\": \\"jest --no-cache\\",
    \\"lint\\": \\"eslint . --cache --ext .ts\\",
    \\"version\\": \\"oclif-dev readme && git add README.md\\"
  },
  \\"types\\": \\"lib/index.d.ts\\",
  \\"main\\": \\"lib/index.js\\"
}
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 2`] = `
"lib 
node_modules
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 3`] = `
"{
  \\"root\\": true,
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2017,
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [\\"@typescript-eslint\\", \\"jest\\", \\"prettier\\"],
  \\"extends\\": [
    \\"eslint:recommended\\",
    \\"prettier\\",
    \\"prettier/@typescript-eslint\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:jest/style\\"
  ],
  \\"env\\": {
    \\"browser\\": false,
    \\"node\\": true,
    \\"es6\\": true
  },
  \\"rules\\": {
    \\"prettier/prettier\\": \\"error\\",
    \\"no-unused-vars\\": \\"off\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"error\\",
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": [\\"console\\"]
      }
    ]
  },
  \\"overrides\\": [
    {
      \\"files\\": [\\"__tests__/**/*.ts\\"],
      \\"env\\": {
        \\"jest\\": true
      }
    }
  ]
}"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 4`] = `
"lib
.eslintcache"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 5`] = `
"module.exports = {
  singleQuote: true,
  trailingComma: 'es5',
  printWidth: 100,
};"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 6`] = `
"# checkup-plugin-foo

Checkup plugin

[![oclif](https://img.shields.io/badge/cli-oclif-brightgreen.svg)](https://oclif.io)
[![Version](https://img.shields.io/npm/v/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![Downloads/week](https://img.shields.io/npm/dw/plugin-default.svg)](https://npmjs.org/package/plugin-default)
[![License](https://img.shields.io/npm/l/plugin-default.svg)](https://github.com/checkupjs/checkup/blob/master/package.json)

<!-- toc -->

# Usage

<!-- usage -->

# Commands

<!-- commands -->
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 7`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  transform: { '\\\\\\\\.ts$': 'ts-jest' },
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverageFrom: ['src/**/*.ts'],
  coveragePathIgnorePatterns: ['/templates/'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
  testPathIgnorePatterns: ['__fixtures__'],
};
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 8`] = `
"{
  \\"compilerOptions\\": {
    \\"declaration\\": true,
    \\"importHelpers\\": true,
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,
    \\"target\\": \\"es2017\\",
    \\"allowSyntheticDefaultImports\\": true,
    \\"sourceMap\\": true,
    \\"outDir\\": \\"lib\\",
    \\"rootDir\\": \\"src\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  },
  \\"include\\": [\\"src/**/*\\"]
}
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 9`] = `
"export default {};

export * from './types';
"
`;

exports[`plugin generator generates plugin with unmodified name with defaults 10`] = `""`;

exports[`plugin generator generates plugin with unmodified name with defaults 11`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with unmodified name with defaults 12`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with unmodified name with defaults 13`] = `
Array [
  ".gitkeep",
]
`;

exports[`plugin generator generates plugin with unmodified name with defaults 14`] = `
Array [
  ".gitkeep",
]
`;
